// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CompatSession /> > renders a finished session 1`] = `
<DocumentFragment>
  <section
    class="_sessionCardRoot_e2909e"
  >
    <a
      aria-disabled="true"
      class="_sessionCard_e2909e _disabled_e2909e"
      disabled=""
      role="link"
    >
      <header
        class="_cardHeader_e2909e"
      >
        <svg
          aria-label="Unknown device type"
          class="_deviceTypeIcon_e677aa"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 21c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 5 3h14c.55 0 1.02.196 1.413.587.39.393.587.863.587 1.413v14c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 19 21H5Zm0-2h14V5H5v14Z"
          />
          <path
            d="M11 10a1 1 0 1 1 1.479.878c-.31.17-.659.413-.94.741-.286.334-.539.8-.539 1.381a1 1 0 0 0 2 .006.3.3 0 0 1 .057-.085 1.39 1.39 0 0 1 .382-.288A3 3 0 1 0 9 10a1 1 0 1 0 2 0Zm1.999 3.011v-.004.005ZM12 17a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          />
        </svg>
        <div
          class="_content_e2909e"
        >
          <div
            class="_name_e2909e"
          >
            Unknown device
          </div>
          <div
            class="_client_e2909e"
          >
            element.io
          </div>
        </div>
      </header>
      <ul
        class="_metadata_e2909e"
      >
        <li>
          <div
            class="_key_e2909e"
          >
            Signed in
          </div>
          <div
            class="_value_e2909e"
          >
            <time
              datetime="2023-06-29T03:35:17Z"
            >
              Thu, 29 Jun 2023, 03:35
            </time>
          </div>
        </li>
        <li>
          <div
            class="_key_e2909e"
          >
            Device ID
          </div>
          <div
            class="_value_e2909e"
          >
            abcd1234
          </div>
        </li>
      </ul>
    </a>
  </section>
</DocumentFragment>
`;

exports[`<CompatSession /> > renders an active session 1`] = `
<DocumentFragment>
  <section
    class="_sessionCardRoot_e2909e"
  >
    <a
      class="_sessionCard_e2909e"
      href="/sessions/session-id"
    >
      <header
        class="_cardHeader_e2909e"
      >
        <svg
          aria-label="Unknown device type"
          class="_deviceTypeIcon_e677aa"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 21c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 5 3h14c.55 0 1.02.196 1.413.587.39.393.587.863.587 1.413v14c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 19 21H5Zm0-2h14V5H5v14Z"
          />
          <path
            d="M11 10a1 1 0 1 1 1.479.878c-.31.17-.659.413-.94.741-.286.334-.539.8-.539 1.381a1 1 0 0 0 2 .006.3.3 0 0 1 .057-.085 1.39 1.39 0 0 1 .382-.288A3 3 0 1 0 9 10a1 1 0 1 0 2 0Zm1.999 3.011v-.004.005ZM12 17a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          />
        </svg>
        <div
          class="_content_e2909e"
        >
          <div
            class="_name_e2909e"
          >
            Unknown device
          </div>
          <div
            class="_client_e2909e"
          >
            element.io
          </div>
        </div>
      </header>
      <ul
        class="_metadata_e2909e"
      >
        <li>
          <div
            class="_key_e2909e"
          >
            Signed in
          </div>
          <div
            class="_value_e2909e"
          >
            <time
              datetime="2023-06-29T03:35:17Z"
            >
              Thu, 29 Jun 2023, 03:35
            </time>
          </div>
        </li>
        <li>
          <div
            class="_key_e2909e"
          >
            Device ID
          </div>
          <div
            class="_value_e2909e"
          >
            abcd1234
          </div>
        </li>
      </ul>
    </a>
    <div
      class="_action_e2909e"
    >
      <button
        aria-controls="radix-:r0:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="_button_i91xf_17 _has-icon_i91xf_66 _destructive_i91xf_116"
        data-kind="secondary"
        data-size="sm"
        data-state="closed"
        role="button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 21c-.55 0-1.02-.196-1.412-.587A1.926 1.926 0 0 1 5 19V6a.968.968 0 0 1-.713-.287A.968.968 0 0 1 4 5c0-.283.096-.52.287-.713A.968.968 0 0 1 5 4h4a.97.97 0 0 1 .287-.712A.968.968 0 0 1 10 3h4a.97.97 0 0 1 .713.288A.968.968 0 0 1 15 4h4a.97.97 0 0 1 .712.287c.192.192.288.43.288.713s-.096.52-.288.713A.968.968 0 0 1 19 6v13c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 17 21H7ZM7 6v13h10V6H7Zm2 10c0 .283.096.52.287.712.192.192.43.288.713.288s.52-.096.713-.288A.968.968 0 0 0 11 16V9a.967.967 0 0 0-.287-.713A.968.968 0 0 0 10 8a.968.968 0 0 0-.713.287A.968.968 0 0 0 9 9v7Zm4 0c0 .283.096.52.287.712.192.192.43.288.713.288s.52-.096.713-.288A.968.968 0 0 0 15 16V9a.967.967 0 0 0-.287-.713A.968.968 0 0 0 14 8a.968.968 0 0 0-.713.287A.967.967 0 0 0 13 9v7Z"
          />
        </svg>
        Remove device
      </button>
    </div>
  </section>
</DocumentFragment>
`;
